# Capture_Point_Walk

./: CMakeLists.txt  CapturePointControl.cpp  CapturePointControl.h  FootPlanner.cpp  GenerateWalkPattern  README.md  cp_walk.py  cp_walk_rot.py  main.cpp
alpha/: CapturePointControl.cpp  CapturePointControl.h  main.cpp
script/: base_capturepoint_walk.py
